--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -21,4 +21,7 @@ html(lang="en")
                 .footer 
                     p.text Copyright ©2023 All rights reserved | This template is made with  by 00013786    
         block content
+        script(src="/static/javascript/generate.js") 
+        script(src="/static/javascript/blog_by_id.js") 
+        script(src="/static/javascript/script.js") 
         
