--- a/views/blog_by_id.pug
+++ b/views/blog_by_id.pug
@@ -2,9 +2,9 @@ extends navbar.pug
 
 block content
     .container 
-        h2.title dsfdsf
-        p.description dfdsds
-        img(src="", alt="image").image
+        h2.title #{blog.title}
+        p.description #{blog.description}
+        img(src=blog.image ? `/static/uploads/${blog.image}` : 'https://www.freeiconspng.com/thumbs/no-image-icon/no-image-icon-6.png', alt="image").image
         .buttons 
             a(href=`/generate?blog_id=${blog.id}`).update Update
             a(type="button").delete Delete 
@@ -12,5 +12,5 @@ block content
         .modal_delete_content
             h3 Do you really want to delete?
             .claim
-                a(href="") Yes 
+                a(href=`/${blog.id}/delete`) Yes 
                 a.reject_delete No
