readme file added && api/v1/blogs url added && routes separated into 4 different files

--- a/views/home.pug
+++ b/views/home.pug
@@ -7,7 +7,7 @@ block content
                 .about_me 
                     h1.text1.greeting-text Hi,
                     span.text1.first-text I'm 
-                    span.text1.sec-text Masha
+                    span.text1.sec-text Mashrab
                 .required_text 
                     p This web application was created to fulfill Web Technology module’s requirements and does not represent an actual company or service
                 .buttons-home
