--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -1,6 +1,6 @@
 html(lang="en")
     head
-        title Mashi.blog
+        title PersonalBlog
         link(rel="stylesheet", href="/static/styles.css")
         link(rel="stylesheet", href="/static/generate.css")
         link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer")
